--- a/meta.ini
+++ b/meta.ini
@@ -1,7 +1,8 @@
 [custom]
 ; ==========================================================
-; 2026 终极优化稳定版
+; 2026 终极优化稳定版 · 冷门智能救场增强
 ; Google + AI + 流媒体 全优化
+; SG → JP 优先
 ; ==========================================================
 
 enable_rule_generator=true
@@ -17,25 +18,20 @@ exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|
 ; 1️⃣ 规则层（从精确 → 宽泛）
 ; ==========================================================
 
-; --- 局域网 ---
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
 
-; --- Adobe（可断网）---
 ruleset=🟥 Adobe,[]GEOSITE,adobe
 ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
 
-; --- 国内 ---
 ruleset=DIRECT,[]GEOSITE,google-cn
 ruleset=DIRECT,[]GEOSITE,cn
 ruleset=DIRECT,[]GEOIP,cn,no-resolve
 
-; --- AI ---
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
 ruleset=✨ Gemini,[]GEOSITE,google-gemini
 ruleset=🧠 AI,[]GEOSITE,category-ai-!cn
 
-; --- 常用海外 ---
 ruleset=📦 Notion,[]GEOSITE,notion
 ruleset=📨 Telegram,[]GEOSITE,telegram
 ruleset=🍎 Apple,[]GEOSITE,apple
@@ -48,29 +44,24 @@ ruleset=🛠 GitHub,[]GEOSITE,github
 ruleset=🎮 Steam,[]GEOSITE,steam
 ruleset=🚝 测速工具,[]GEOSITE,category-speedtest
 
-; --- 基础设施 ---
 ruleset=🔎 Google,[]GEOSITE,google
 ruleset=☁️ cloudflare,[]GEOSITE,cloudflare
 ruleset=🪟 Microsoft,[]GEOSITE,microsoft
 
-; --- GFW ---
 ruleset=🚀 核心调度,[]GEOSITE,gfw
 
-; --- 非标端口 ---
 ruleset=🔀 非标端口,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Port_Direct.yaml,172800
 
-; --- 最终兜底 ---
 ruleset=🐟 漏网之鱼,[]FINAL
-
 
 
 ; ==========================================================
 ; 2️⃣ 应用策略组（SG 优先原则）
 ; ==========================================================
 
-custom_proxy_group=🤖 ChatGPT`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK`[]🌐 Default
-custom_proxy_group=✨ Gemini`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK`[]🌐 Default
-custom_proxy_group=🧠 AI`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK`[]🌐 Default
+custom_proxy_group=🤖 ChatGPT`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK`[]⚡ 智能优选
+custom_proxy_group=✨ Gemini`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK`[]⚡ 智能优选
+custom_proxy_group=🧠 AI`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK`[]⚡ 智能优选
 
 custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]DIRECT
 custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US
@@ -84,33 +75,39 @@ custom_proxy_group=🛠 GitHub`select`[]🇭🇰 HK`[]🇸🇬 SG`[]DIRECT
 custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🇭🇰 HK
 custom_proxy_group=🚝 测速工具`select`[]DIRECT`[]🚀 核心调度
 custom_proxy_group=🟥 Adobe`select`[]REJECT`[]DIRECT
-custom_proxy_group=🔎 Google`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US
+custom_proxy_group=🔎 Google`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK
 custom_proxy_group=☁️ cloudflare`select`[]🇸🇬 SG`[]🇭🇰 HK
 custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG
-
 
 
 ; ==========================================================
 ; 3️⃣ 核心调度层
 ; ==========================================================
 
-custom_proxy_group=🚀 核心调度`select`[]♻️ 自动选择`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US`[]🧭 全部节点`[]DIRECT
-custom_proxy_group=🌐 Default`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US`[]♻️ 自动选择`[]DIRECT
+custom_proxy_group=🚀 核心调度`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US`[]🧭 全部节点`[]DIRECT
+custom_proxy_group=🌐 Default`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 核心调度`[]🌐 Default`[]DIRECT
 custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
 custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 
 
-
 ; ==========================================================
-; 4️⃣ 自动测速（HTTPS 更真实）
+; 4️⃣ 自动测速（分层冷门救场版）
 ; ==========================================================
 
 custom_proxy_group=🧭 全部节点`select`.*
 
-custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,2000,80`false
+; 主流池
+custom_proxy_group=🌏 主流节点`url-test`(?i)(🇸🇬|SG|Singapore|🇯🇵|JP|Japan|Tokyo|Osaka|🇭🇰|HK|Hong Kong|🇺🇸|US|United States)`https://www.gstatic.com/generate_204`300,2000,60`true
 
-custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong)`https://www.gstatic.com/generate_204`300,2000,80`false
-custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|SG|Singapore)`https://www.gstatic.com/generate_204`300,2000,80`false
-custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`https://www.gstatic.com/generate_204`300,2000,80`false
-custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|US|United States|America|Los Angeles)`https://www.gstatic.com/generate_204`300,2000,80`false
+; 冷门池
+custom_proxy_group=🧊 冷门节点`url-test`^(?!.*(🇸🇬|SG|Singapore|🇯🇵|JP|Japan|Tokyo|Osaka|🇭🇰|HK|Hong Kong|🇺🇸|US|United States)).*`https://www.gstatic.com/generate_204`300,2000,100`true
+
+; 智能优选（主流异常自动切冷门）
+custom_proxy_group=⚡ 智能优选`fallback`[]🌏 主流节点`[]🧊 冷门节点`https://www.gstatic.com/generate_204`300
+
+; 区域测速
+custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong)`https://www.gstatic.com/generate_204`300,2000,80`true
+custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|SG|Singapore)`https://www.gstatic.com/generate_204`300,2000,80`true
+custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`https://www.gstatic.com/generate_204`300,2000,80`true
+custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|US|United States|America|Los Angeles)`https://www.gstatic.com/generate_204`300,2000,80`true
