--- a/meta.ini
+++ b/meta.ini
@@ -56,28 +56,32 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 ; ==========================================================
-; 2️⃣ 应用策略组（SG 优先原则）
+; 2️⃣ 应用策略组（全自动冷门救场版）
 ; ==========================================================
 
-custom_proxy_group=🤖 ChatGPT`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK`[]⚡ 智能优选
-custom_proxy_group=✨ Gemini`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK`[]⚡ 智能优选
-custom_proxy_group=🧠 AI`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK`[]⚡ 智能优选
+custom_proxy_group=🤖 ChatGPT`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK
+custom_proxy_group=✨ Gemini`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK
+custom_proxy_group=🧠 AI`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK
 
-custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]DIRECT
-custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG
-custom_proxy_group=🎬 YouTube`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP
-custom_proxy_group=🎥 Netflix`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK
-custom_proxy_group=🎵 TikTok`select`[]🇸🇬 SG`[]🇯🇵 JP
-custom_proxy_group=📸 Instagram`select`[]🇭🇰 HK`[]🇸🇬 SG
-custom_proxy_group=🐦 X`select`[]🇸🇬 SG`[]🇯🇵 JP
-custom_proxy_group=🛠 GitHub`select`[]🇭🇰 HK`[]🇸🇬 SG`[]DIRECT
-custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🇭🇰 HK
+custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]⚡ 智能优选`[]DIRECT
+custom_proxy_group=📨 Telegram`select`[]⚡ 智能优选`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]⚡ 智能优选`[]🇭🇰 HK`[]🇸🇬 SG
+
+custom_proxy_group=🎬 YouTube`select`[]⚡ 智能优选`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP
+custom_proxy_group=🎥 Netflix`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK
+custom_proxy_group=🎵 TikTok`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP
+
+custom_proxy_group=📸 Instagram`select`[]⚡ 智能优选`[]🇭🇰 HK`[]🇸🇬 SG
+custom_proxy_group=🐦 X`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP
+custom_proxy_group=🛠 GitHub`select`[]⚡ 智能优选`[]🇭🇰 HK`[]🇸🇬 SG`[]DIRECT
+
+custom_proxy_group=🎮 Steam`select`[]DIRECT`[]⚡ 智能优选`[]🇭🇰 HK
 custom_proxy_group=🚝 测速工具`select`[]DIRECT`[]🚀 核心调度
 custom_proxy_group=🟥 Adobe`select`[]REJECT`[]DIRECT
+
 custom_proxy_group=🔎 Google`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK
-custom_proxy_group=☁️ cloudflare`select`[]🇸🇬 SG`[]🇭🇰 HK
-custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG
+custom_proxy_group=☁️ cloudflare`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇭🇰 HK
+custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]⚡ 智能优选`[]🇭🇰 HK`[]🇸🇬 SG
 
 
 ; ==========================================================
