--- a/meta.ini
+++ b/meta.ini
@@ -1,6 +1,6 @@
 [custom]
 ; ==========================================================
-; 2026 家庭自建终极稳定版
+; 2026 家庭自建终极稳定版（智能直连优先版）
 ; IPv6 + Lucky + Docker + AI + 流媒体 + 非标端口智能救场
 ; SG → JP 优先
 ; ==========================================================
@@ -15,18 +15,17 @@ exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|
 
 
 ; ==========================================================
-; 1️⃣ 规则层（从精确 → 宽泛）
+; 1️⃣ 规则层（精确 → 宽泛）
 ; ==========================================================
 
 ; 本地 & 私有
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
 
-; 自建域名强制直连（非常重要）
+; 自建域名强制直连（Lucky / DuckDNS）
 ruleset=DIRECT,[]DOMAIN-SUFFIX,duckdns.org
 
 ; 国内直连
-ruleset=DIRECT,[]GEOSITE,google-cn
 ruleset=DIRECT,[]GEOSITE,cn
 ruleset=DIRECT,[]GEOIP,cn,no-resolve
 
@@ -48,13 +47,13 @@ ruleset=🛠 GitHub,[]GEOSITE,github
 ruleset=🎮 Steam,[]GEOSITE,steam
 ruleset=🚝 测速工具,[]GEOSITE,category-speedtest
 
-; GFW
+; GFW 直接代理
 ruleset=🚀 核心调度,[]GEOSITE,gfw
 
-; 非标端口智能
+; 非标端口智能（先直连）
 ruleset=🔀 非标端口,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Port_Direct.yaml,172800
 
-; FINAL 直连优先
+; 兜底（智能直连优先）
 ruleset=🧩 直连优先,[]FINAL
 
 
@@ -88,10 +87,10 @@ custom_proxy_group=🚝 测速工具`select`[]DIRECT`[]🚀 核心调度
 
 custom_proxy_group=🚀 核心调度`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US`[]🧭 全部节点`[]DIRECT
 
-; FINAL 智能直连优先
+; FINAL → 直连优先（关键）
 custom_proxy_group=🧩 直连优先`fallback`[]DIRECT`[]⚡ 智能优选`https://www.gstatic.com/generate_204`300
 
-; 非标端口智能
+; 非标端口 → 直连优先
 custom_proxy_group=🔀 非标端口`fallback`[]DIRECT`[]⚡ 智能优选`https://www.gstatic.com/generate_204`300
 
 
