--- a/meta.ini
+++ b/meta.ini
@@ -1,7 +1,7 @@
 [custom]
 ; ==========================================================
-; 2026 家庭自建终极稳定版（智能直连优先版）
-; IPv6 + Lucky + Docker + AI + 流媒体 + 非标端口智能救场
+; 2026 终极优化稳定版 · 冷门智能救场增强
+; Google + AI + 流媒体 全优化
 ; SG → JP 优先
 ; ==========================================================
 
@@ -15,26 +15,23 @@ exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|
 
 
 ; ==========================================================
-; 1️⃣ 规则层（精确 → 宽泛）
+; 1️⃣ 规则层（从精确 → 宽泛）
 ; ==========================================================
 
-; 本地 & 私有
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
 
-; 自建域名强制直连（Lucky / DuckDNS）
-ruleset=DIRECT,[]DOMAIN-SUFFIX,duckdns.org
+ruleset=🟥 Adobe,[]GEOSITE,adobe
+ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
 
-; 国内直连
+ruleset=DIRECT,[]GEOSITE,google-cn
 ruleset=DIRECT,[]GEOSITE,cn
 ruleset=DIRECT,[]GEOIP,cn,no-resolve
 
-; AI
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
 ruleset=✨ Gemini,[]GEOSITE,google-gemini
 ruleset=🧠 AI,[]GEOSITE,category-ai-!cn
 
-; 常用服务
 ruleset=📦 Notion,[]GEOSITE,notion
 ruleset=📨 Telegram,[]GEOSITE,telegram
 ruleset=🍎 Apple,[]GEOSITE,apple
@@ -47,18 +44,19 @@ ruleset=🛠 GitHub,[]GEOSITE,github
 ruleset=🎮 Steam,[]GEOSITE,steam
 ruleset=🚝 测速工具,[]GEOSITE,category-speedtest
 
-; GFW 直接代理
+ruleset=🔎 Google,[]GEOSITE,google
+ruleset=☁️ cloudflare,[]GEOSITE,cloudflare
+ruleset=🪟 Microsoft,[]GEOSITE,microsoft
+
 ruleset=🚀 核心调度,[]GEOSITE,gfw
 
-; 非标端口智能（先直连）
 ruleset=🔀 非标端口,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Port_Direct.yaml,172800
 
-; 兜底（智能直连优先）
-ruleset=🧩 直连优先,[]FINAL
+ruleset=🐟 漏网之鱼,[]FINAL
 
 
 ; ==========================================================
-; 2️⃣ 应用策略组
+; 2️⃣ 应用策略组（全自动冷门救场版）
 ; ==========================================================
 
 custom_proxy_group=🤖 ChatGPT`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK
@@ -67,18 +65,23 @@ custom_proxy_group=🧠 AI`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP
 
 custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]⚡ 智能优选`[]DIRECT
 custom_proxy_group=📨 Telegram`select`[]⚡ 智能优选`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]⚡ 智能优选
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]⚡ 智能优选`[]🇭🇰 HK`[]🇸🇬 SG
 
 custom_proxy_group=🎬 YouTube`select`[]⚡ 智能优选`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP
-custom_proxy_group=🎥 Netflix`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP
+custom_proxy_group=🎥 Netflix`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK
 custom_proxy_group=🎵 TikTok`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP
 
-custom_proxy_group=📸 Instagram`select`[]⚡ 智能优选`[]🇭🇰 HK
-custom_proxy_group=🐦 X`select`[]⚡ 智能优选`[]🇸🇬 SG
-custom_proxy_group=🛠 GitHub`select`[]⚡ 智能优选`[]DIRECT
+custom_proxy_group=📸 Instagram`select`[]⚡ 智能优选`[]🇭🇰 HK`[]🇸🇬 SG
+custom_proxy_group=🐦 X`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP
+custom_proxy_group=🛠 GitHub`select`[]⚡ 智能优选`[]🇭🇰 HK`[]🇸🇬 SG`[]DIRECT
 
-custom_proxy_group=🎮 Steam`select`[]DIRECT`[]⚡ 智能优选
+custom_proxy_group=🎮 Steam`select`[]DIRECT`[]⚡ 智能优选`[]🇭🇰 HK
 custom_proxy_group=🚝 测速工具`select`[]DIRECT`[]🚀 核心调度
+custom_proxy_group=🟥 Adobe`select`[]REJECT`[]DIRECT
+
+custom_proxy_group=🔎 Google`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK
+custom_proxy_group=☁️ cloudflare`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇭🇰 HK
+custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]⚡ 智能优选`[]🇭🇰 HK`[]🇸🇬 SG
 
 
 ; ==========================================================
@@ -86,26 +89,28 @@ custom_proxy_group=🚝 测速工具`select`[]DIRECT`[]🚀 核心调度
 ; ==========================================================
 
 custom_proxy_group=🚀 核心调度`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US`[]🧭 全部节点`[]DIRECT
-
-; FINAL → 直连优先（关键）
-custom_proxy_group=🧩 直连优先`fallback`[]DIRECT`[]⚡ 智能优选`https://www.gstatic.com/generate_204`300
-
-; 非标端口 → 直连优先
-custom_proxy_group=🔀 非标端口`fallback`[]DIRECT`[]⚡ 智能优选`https://www.gstatic.com/generate_204`300
+custom_proxy_group=🌐 Default`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 核心调度`[]🌐 Default`[]DIRECT
+custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
+custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 
 
 ; ==========================================================
-; 4️⃣ 自动测速
+; 4️⃣ 自动测速（分层冷门救场版）
 ; ==========================================================
 
 custom_proxy_group=🧭 全部节点`select`.*
 
+; 主流池
 custom_proxy_group=🌏 主流节点`url-test`(?i)(🇸🇬|SG|Singapore|🇯🇵|JP|Japan|Tokyo|Osaka|🇭🇰|HK|Hong Kong|🇺🇸|US|United States)`https://www.gstatic.com/generate_204`300,2000,60`true
 
+; 冷门池
 custom_proxy_group=🧊 冷门节点`url-test`^(?!.*(🇸🇬|SG|Singapore|🇯🇵|JP|Japan|Tokyo|Osaka|🇭🇰|HK|Hong Kong|🇺🇸|US|United States)).*`https://www.gstatic.com/generate_204`300,2000,100`true
 
+; 智能优选（主流异常自动切冷门）
 custom_proxy_group=⚡ 智能优选`fallback`[]🌏 主流节点`[]🧊 冷门节点`https://www.gstatic.com/generate_204`300
 
+; 区域测速
 custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong)`https://www.gstatic.com/generate_204`300,2000,80`true
 custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|SG|Singapore)`https://www.gstatic.com/generate_204`300,2000,80`true
 custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`https://www.gstatic.com/generate_204`300,2000,80`true
