--- a/meta.ini
+++ b/meta.ini
@@ -115,12 +115,24 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🚀 核心调度`[]🌐 Default`[
 custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
 custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 
+; ==========================================================
+; 4️⃣ 自动测速与节点归类 (核心修复区)
+; ==========================================================
 
-; ==========================================================
-; 4️⃣ 自动测速（分层冷门救场版）
-; ==========================================================
+; --- ⚡ 智能优选 (修复报错的关键：定义这个组) ---
+custom_proxy_group=⚡ 智能优选`url-test`(🇸🇬|SG|Singapore|🇯🇵|JP|Japan|🇭🇰|HK|Hong Kong|🇺🇸|US|United States)`https://www.gstatic.com/generate_204`300,600,50
+
+; --- 🧭 全部节点 (不做筛选，展示所有可用节点) ---
 custom_proxy_group=🧭 全部节点`select`.*
 
+; --- 🌍 分国家/地区自动测速 (让你的按钮点下去有节点) ---
+custom_proxy_group=🇸🇬 SG`url-test`(🇸🇬|SG|Singapore)`https://www.gstatic.com/generate_204`300,,
+custom_proxy_group=🇯🇵 JP`url-test`(🇯🇵|JP|Japan|Tokyo|Osaka)`https://www.gstatic.com/generate_204`300,,
+custom_proxy_group=🇭🇰 HK`url-test`(🇭🇰|HK|Hong Kong)`https://www.gstatic.com/generate_204`300,,
+custom_proxy_group=🇺🇸 US`url-test`(🇺🇸|US|United States)`https://www.gstatic.com/generate_204`300,,
+
+; --- 🌏 主流节点 (正则匹配常用区域) ---
 custom_proxy_group=🌏 主流节点`url-test`(?i)(🇸🇬|SG|Singapore|🇯🇵|JP|Japan|Tokyo|Osaka|🇭🇰|HK|Hong Kong|🇺🇸|US|United States)`https://www.gstatic.com/generate_204`300,2000,60`true
 
+; --- 🧊 冷门节点 (排除掉主流区域的节点) ---
 custom_proxy_group=🧊 冷门节点`url-test`^(?!.*(🇸🇬|SG|Singapore|🇯🇵|JP|Japan|Tokyo|Osaka|🇭🇰|HK|Hong Kong|🇺🇸|US|United States)).*`https://www.gstatic.com/generate_204`300,2000,60`true
