--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,8 +2,9 @@ name: Update Video Rules
 
 on:
   schedule:
-    - cron: '0 0 * * *' # 每天凌晨自动运行
-  workflow_dispatch:      # 允许手动触发执行
+    # 0 0,8,16 分别对应北京时间的 08:00, 16:00, 00:00
+    - cron: '0 0,8,16 * * *' 
+  workflow_dispatch: # 保留手动触发，方便随时调试
 
 jobs:
   build:
