--- a/meta.ini
+++ b/meta.ini
@@ -11,43 +11,18 @@ overwrite_original_rules=true
 exclude=官网|网站|最新网址|防失联|失联|公告|通知|TG|Telegram|电报|群|频道|QQ群|客服|工单|官网地址
 
 ; ==========================================================
-; 1️⃣ 规则层 (恢复所有原始链接 + 增加影视直连)
+; 1️⃣ 规则层 (已对接 8 小时自动更新识别程序)
 ; ==========================================================
 
 ; --- [最高优先级] 影视采集站 API & 视频流直连 ---
-; 远程规则（包含数千个采集站和 CDN）
-ruleset=DIRECT,clash-classic:https://raw.githubusercontent.com/Blackmatrix7/ios_rule_script/master/rule/Clash/Video/Video.yaml,86400
-ruleset=DIRECT,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/cnmovies.txt,86400
 
-; 本地关键词补漏（确保 ryplay 等变体必过）
-ruleset=DIRECT,[]DOMAIN-KEYWORD,ffzy
-ruleset=DIRECT,[]DOMAIN-KEYWORD,wolong
-ruleset=DIRECT,[]DOMAIN-KEYWORD,zuidapi
-ruleset=DIRECT,[]DOMAIN-KEYWORD,apibdzy
-ruleset=DIRECT,[]DOMAIN-KEYWORD,bfzy
-ruleset=DIRECT,[]DOMAIN-KEYWORD,jszy
-ruleset=DIRECT,[]DOMAIN-KEYWORD,tyys
-ruleset=DIRECT,[]DOMAIN-KEYWORD,wujin
-ruleset=DIRECT,[]DOMAIN-KEYWORD,mdzy
-ruleset=DIRECT,[]DOMAIN-KEYWORD,360zy
-ruleset=DIRECT,[]DOMAIN-KEYWORD,dytt
-ruleset=DIRECT,[]DOMAIN-KEYWORD,rycj
-ruleset=DIRECT,[]DOMAIN-KEYWORD,wwzy
-ruleset=DIRECT,[]DOMAIN-KEYWORD,hongniu
-ruleset=DIRECT,[]DOMAIN-KEYWORD,guangsu
-ruleset=DIRECT,[]DOMAIN-KEYWORD,ikun
-ruleset=DIRECT,[]DOMAIN-KEYWORD,ukuapi
-ruleset=DIRECT,[]DOMAIN-KEYWORD,huya
-ruleset=DIRECT,[]DOMAIN-KEYWORD,xinlang
-ruleset=DIRECT,[]DOMAIN-KEYWORD,lziapi
-ruleset=DIRECT,[]DOMAIN-KEYWORD,hhzy
-ruleset=DIRECT,[]DOMAIN-KEYWORD,jyzy
-ruleset=DIRECT,[]DOMAIN-KEYWORD,1080zy
-ruleset=DIRECT,[]DOMAIN-KEYWORD,lovedan
-ruleset=DIRECT,[]DOMAIN-KEYWORD,lbapi
-ruleset=DIRECT,[]DOMAIN-KEYWORD,ryplay
-ruleset=DIRECT,[]DOMAIN-KEYWORD,play9
+; 🟢 核心：对接你自己的 GitHub 自动识别程序 (每 8 小时捕获一次变体)
+; 将下面的链接换成你自己的 MyVideo.list 的 Raw 链接
+ruleset=DIRECT,clash-classic:https://raw.githubusercontent.com/ycl2006/meta/main/MyVideo.list,28800
+
+; 只保留极少数无法通过域名识别的死硬关键词
 ruleset=DIRECT,[]DOMAIN-KEYWORD,m3u8
+ruleset=DIRECT,[]DOMAIN-KEYWORD,index.m3u8
 
 ; --- 基础系统直连 ---
 ruleset=DIRECT,[]GEOSITE,private
